Remove duplicate code CSS variables that are overriding the correct dark mode ones

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -124,8 +124,6 @@
   --nrdb-color--rotated: #37435E;
   --nrdb-color--restricted: #674B76;
   --nrdb-color--unverified: #494949;
-  --nrdb-color--code: #c7254e;
-  --nrdb-color--code-bg: #f9f2f4;
   --nrdb-color--alert-danger: #ff908e;
   --nrdb-color--alert-danger-bg: #371414;
   --nrdb-color--alert-danger-border: #812F2F;
